crates/selene-gql/tests/snapshots/plan_snapshot_corpus__corpus_snapshots_match@path_selector_fixed_chain.snap
---
source: crates/selene-gql/tests/plan_snapshot_corpus.rs
expression: snapshot.to_string()
---
fired_rules: none
output: [a, c]
pattern:
  bindings: 3 [a, b, c]
  join_tree: ProductPaths(patterns=1)
  pattern_filters: 0
  scans:
    - none
  order_access: []
pipeline:
  - Project(columns=[a,c])
