crates/selene-gql/tests/snapshots/plan_snapshot_corpus__corpus_snapshots_match@path_selector_single_edge.snap
---
source: crates/selene-gql/tests/plan_snapshot_corpus.rs
expression: snapshot.to_string()
---
fired_rules: none
output: [a, b]
pattern:
  bindings: 2 [a, b]
  join_tree: ProductPaths(patterns=1)
  pattern_filters: 0
  scans:
    - none
  order_access: []
pipeline:
  - Project(columns=[a,b])
